--- a/.gitmodules
+++ b/.gitmodules
@@ -6,52 +6,52 @@
 	url = git://github.com/mileszs/ack.vim.git
 [submodule ".vim/bundle/align"]
 	path = .vim/bundle/align
-	url = https://github.com/vim-scripts/Align.git
+	url = git://github.com/vim-scripts/Align.git
 [submodule ".vim/bundle/delimitmate"]
 	path = .vim/bundle/delimitmate
-	url = https://github.com/Raimondi/delimitMate.git
+	url = git://github.com/Raimondi/delimitMate.git
 [submodule ".vim/bundle/fuzzyfinder"]
 	path = .vim/bundle/fuzzyfinder
 	url = git://github.com/vim-scripts/FuzzyFinder.git
 [submodule ".vim/bundle/gundo"]
 	path = .vim/bundle/gundo
-	url = https://github.com/nelstrom/gundo.vim.git
+	url = git://github.com/nelstrom/gundo.vim.git
 [submodule ".vim/bundle/jquery"]
 	path = .vim/bundle/jquery
-	url = https://github.com/vim-scripts/jQuery.git
+	url = git://github.com/vim-scripts/jQuery.git
 [submodule ".vim/bundle/l9"]
 	path = .vim/bundle/l9
 	url = git://github.com/vim-scripts/L9.git
 [submodule ".vim/bundle/markdown"]
 	path = .vim/bundle/markdown
-	url = https://github.com/plasticboy/vim-markdown.git
+	url = git://github.com/plasticboy/vim-markdown.git
 [submodule ".vim/bundle/matchit"]
 	path = .vim/bundle/matchit
-	url = https://github.com/vim-scripts/matchit.zip.git
+	url = git://github.com/vim-scripts/matchit.zip.git
 [submodule ".vim/bundle/mru"]
 	path = .vim/bundle/mru
-	url = https://github.com/vim-scripts/mru.vim.git
+	url = git://github.com/vim-scripts/mru.vim.git
 [submodule ".vim/bundle/pep8"]
 	path = .vim/bundle/pep8
-	url = https://github.com/vim-scripts/pep8.git
+	url = git://github.com/vim-scripts/pep8.git
 [submodule ".vim/bundle/pyflakes"]
 	path = .vim/bundle/pyflakes
-	url = https://github.com/kevinw/pyflakes-vim.git
+	url = git://github.com/kevinw/pyflakes-vim.git
 [submodule ".vim/bundle/rainbow-parenthesi"]
 	path = .vim/bundle/rainbow-parenthesi
 	url = git://github.com/vim-scripts/Rainbow-Parenthesis.git
 [submodule ".vim/bundle/ropevim"]
 	path = .vim/bundle/ropevim
-	url = https://github.com/klen/rope-vim.git
+	url = git://github.com/klen/rope-vim.git
 [submodule ".vim/bundle/sessionman"]
 	path = .vim/bundle/sessionman
 	url = git://github.com/vim-scripts/sessionman.vim.git
 [submodule ".vim/bundle/supertab"]
 	path = .vim/bundle/supertab
-	url = https://github.com/ervandew/supertab.git
+	url = git://github.com/ervandew/supertab.git
 [submodule ".vim/bundle/surround"]
 	path = .vim/bundle/surround
-	url = https://github.com/tpope/vim-surround.git
+	url = git://github.com/tpope/vim-surround.git
 [submodule ".vim/bundle/tagbar"]
 	path = .vim/bundle/tagbar
 	url = git://github.com/majutsushi/tagbar.git
