updated .gvimrc, .zshrc, .xatkrc

--- a/.my.cnf
+++ b/.my.cnf
@@ -1,6 +1,6 @@
 [client]
 default-character-set = 'utf8'
-pager = 'less -n -i -S'
+#pager = 'less -n -i -S'
 prompt = '\u@\h [\d] > '
 user = 'root'
 password = ''
