[tmux] mouse scrolling, [zsh] new apt aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ set -g base-index 1
 
 set -g history-limit 5000
 
+# mouse scrolling
+set -g mode-mouse on
+
 #set window notifications
 #setw -g monitor-activity on
 #set -g visual-activity on
