--- a/.gitmodules
+++ b/.gitmodules
@@ -89,3 +89,6 @@
 	path = .vim/bundle/syntastic
 	url = git://github.com/scrooloose/syntastic.git
 
+[submodule ".vim/bundle/tcomment_vim"]
+	path = .vim/bundle/tcomment_vim
+	url = git://github.com/tomtom/tcomment_vim.git
