updated zshrc and vimrc

--- a/.gitmodules
+++ b/.gitmodules
@@ -64,6 +64,8 @@
 [submodule ".vim/bundle/vim-addon-mw-utils"]
 	path = .vim/bundle/vim-addon-mw-utils
 	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
+
 [submodule ".vim/bundle/snipmate-snippets"]
-	path = .vim/bundle/snipmate-snippets
-	url = https://github.com/honza/snipmate-snippets.git
+    path = .vim/bundle/snipmate-snippets
+    url = https://github.com/vim-scripts/snipmate-snippets
+
