--- a/.muttrc
+++ b/.muttrc
@@ -5,6 +5,7 @@ set editor='vim -c "set spell spelllang=ru_ru,en_us"'
 # set edit_headers # see the headers when editing
 set sort = reverse-threads # sort by newest conversation first
 set sort_aux = last-date-received
+set signature = "~/.mutt/signature"
 
 # IMAP
 set from = user@gmail.com
