--- a/.gitconfig
+++ b/.gitconfig
@@ -36,4 +36,8 @@
 
 [merge]
   # Always show a diffstat at the end of a merge
-  stat = true
+    stat = true
+    tool = meld
+
+#[diff]  
+#    external = meld
